# untron-v3

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CONTRACTS_SKETCH.md  Cargo.toml  LICENSE  README.md  brainstorm.txt  genbindings.sh  genfixtures.sh  genindexerclient.sh  package.json  pnpm-lock.yaml  repomix.config.json  spec.txt  wagmi.config.ts
apps/indexer/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  openapi.json  package.json  ponder.config.ts  ponder.schema.ts
apps/indexer/abis/evm/: TronLightClientAbi.ts  TronTxReaderAbi.ts  UntronV3Abi.ts
apps/indexer/abis/tron/: UntronControllerAbi.ts
apps/indexer/db/init/: 001_postgrest_roles.sh  001_postgrest_roles.sql
apps/indexer/db/migrations/: 0001_foundation_and_roles.sql  0002_ingest.sql  0003_hub.sql  0004_controller.sql  0005_api.sql  0006_realtor_perf.sql  0007_lease_view.sql  0008_relayer_rpc_elim.sql  0009_usdt_deposit_attribution.sql  0010_pending_usdt_deposits.sql  0011_claim_fill_tx_hash.sql  0012_actionability_subjective_pre_entitle.sql  0013_deposit_processed_cache.sql  0014_protocol_graph_views.sql  0014_receiver_backfill_actionability.sql  0015_fix_pending_usdt_deposits.sql  0016_fix_subjective_claim_origin_timestamp.sql  0017_lease_view_add_receiver_addresses.sql  0018_fix_receiver_usdt_transfer_actionability_deposit_processed.sql  0020_realtor_write_action_audit.sql  0021_realtor_principal_leases.sql  0022_ingest_cursor.sql  0023_stream_ingest_cursor_in_summary.sql  0024_controller_usdt_balance.sql  0025_fix_controller_usdt_balance_signs.sql  0026_expected_lease_lookup_index.sql
apps/indexer/src/: config.rs  db.rs  domain.rs  eventChainIndexer.ts  hub_deposit_processed.rs  index.ts  main.rs  metrics.rs  observability.rs  parse.ts  poller.rs  relayer.ts  reorg.rs  rpc.rs  telemetry.rs  tronLightClientDerivedIndexer.ts  untronControllerIsEventChainTipCalled.ts  untronV3DerivedIndexer.ts  util.rs
apps/indexer/src/db/: deposit_processed.rs  event_chain.rs  hub_pending_claims.rs  instance.rs  mod.rs  receiver_usdt.rs  receiver_usdt_subjective_pre_entitle.rs  types.rs
apps/indexer/src/domain/: mod.rs  tron.rs
apps/indexer/src/effect/: config.ts  runtime.ts
apps/indexer/src/eventChain/: tip.ts
apps/indexer/src/event_chain/: decode.rs  errors.rs  mod.rs  range.rs  reorg.rs  repair.rs  rows.rs  runner.rs  state.rs
apps/indexer/src/hub_claims/: mod.rs  pending_claims_kpi.rs
apps/indexer/src/poller/: errors.rs  helpers.rs  logs.rs  mod.rs  policy.rs  progress.rs  range.rs  rows.rs  runner.rs  state.rs  timestamps.rs
apps/indexer/src/receiver_usdt/: mod.rs  range.rs  runner.rs  subjective_pre_entitle_kpi.rs  telemetry.rs
apps/indexer/src/relayer/: deps.ts  env.ts  errors.ts  processor.ts  queue.ts  receivers.ts  register.ts  resolveContractAddress.ts  sqlRows.ts  sync.ts  tronLightClientPublisher.ts  tronProofs.ts
apps/indexer/src/shared/: async.rs  head_cache.rs  logs.rs  mod.rs  progress.rs  rpc_telemetry.rs  timestamps.rs
apps/indexer/test/: controllerMulticallPlanner.test.ts  multicallCheckpoint.test.ts
apps/pool/: .env.example  Cargo.toml  Dockerfile  package.json
apps/pool/src/: backoff.rs  config.rs  main.rs  metrics.rs  runner.rs  util.rs  watcher.rs
apps/realtor/: .env.example  Cargo.toml  Dockerfile  package.json
apps/realtor/src/: api.rs  audit.rs  config.rs  indexer.rs  main.rs  metrics.rs  observability.rs  openapi.rs  util.rs
apps/realtor/src/api/: error.rs  lease_terms.rs  leases.rs  mod.rs  offer.rs  payout_config.rs  realtor.rs  receiver_salt.rs  types.rs  userop.rs
apps/relayer/: .env.example  Cargo.toml  Dockerfile  build.rs  package.json
apps/relayer/src/: config.rs  evm.rs  indexer.rs  lifi.rs  main.rs  metrics.rs  runner.rs  uniswap_v4.rs
apps/relayer/src/hub/: bundler_pool.rs  contracts.rs  mod.rs  packing.rs  paymaster.rs  sender.rs  signing.rs
apps/relayer/src/runner/: executors.rs  model.rs  util.rs
apps/relayer/src/tron/: address.rs  mod.rs  proof.rs
crates/aa/: Cargo.toml
crates/aa/src/: bundler_pool.rs  contracts.rs  entrypoint_sim.rs  lib.rs  packing.rs  paymaster.rs  safe.rs  sender.rs  signing.rs
crates/indexer-client/: Cargo.toml  README.md  build.rs  openapi.json
crates/indexer-client/.openapi-generator/: FILES
crates/indexer-client/docs/: ControllerExecutor.md  ControllerExecutorApi.md  ControllerLp.md  ControllerLpApi.md  ControllerLpExchangeRates.md  ControllerLpExchangeRatesApi.md  ControllerLpTokensWithdrawn.md  ControllerLpTokensWithdrawnApi.md  ControllerOwner.md  ControllerOwnerApi.md  ControllerPayloads.md  ControllerPayloadsApi.md  ControllerPulledFromReceiver.md  ControllerPulledFromReceiverApi.md  ControllerReceivers.md  ControllerReceiversApi.md  ControllerTipProofs.md  ControllerTipProofsApi.md  ControllerUsdt.md  ControllerUsdtApi.md  ControllerUsdtRebalanced.md  ControllerUsdtRebalancedApi.md  ControllerUsdtTransfers.md  ControllerUsdtTransfersApi.md  EventAppended.md  EventAppendedApi.md  Health.md  HealthApi.md  HubBridgers.md  HubBridgersApi.md  HubChains.md  HubChainsApi.md  HubClaims.md  HubClaimsApi.md  HubControllerProcessed.md  HubControllerProcessedApi.md  HubControllerTipUpdates.md  HubControllerTipUpdatesApi.md  HubLeaseNonces.md  HubLeaseNoncesApi.md  (+39 more)
crates/indexer-client/src/: lib.rs
crates/indexer-client/src/apis/: configuration.rs  controller_executor_api.rs  controller_lp_api.rs  controller_lp_exchange_rates_api.rs  controller_lp_tokens_withdrawn_api.rs  controller_owner_api.rs  controller_payloads_api.rs  controller_pulled_from_receiver_api.rs  controller_receivers_api.rs  controller_tip_proofs_api.rs  controller_usdt_api.rs  controller_usdt_rebalanced_api.rs  controller_usdt_transfers_api.rs  event_appended_api.rs  (+28 more)
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/rpc-fallback/: Cargo.toml
crates/rpc-fallback/src/: lib.rs
crates/tron/: Cargo.toml  build.rs  repomix-output.txt
crates/tron/src/: address.rs  grpc.rs  lib.rs  proof.rs  rental.rs  resources.rs  sender.rs  tx.rs  wallet.rs
(+263 files in other folders)
