[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.2.1", features = ["json", "serde"] }
anyhow = "1.0.100"
bs58 = { version = "0.5.1", features = ["check"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lru = "0.13.0"
serde = "1.0.228"
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
untron-v3-bindings = { path = "../../crates/bindings" }
