[package]
name = "realtor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors"] }
opentelemetry = "0.31.0"
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
k256 = "0.13.4"
untron-v3-indexer-client = { path = "../../crates/indexer-client" }
untron-v3-bindings = { path = "../../crates/bindings" }
aa = { path = "../../crates/aa" }
untron-observability = { path = "../../crates/observability" }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
