[package]
name = "realtor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors"] }
opentelemetry = "0.31.0"
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
k256 = "0.13.4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "json", "uuid"] }
uuid = { version = "1.18.1", features = ["v4"] }
untron-v3-indexer-client = { path = "../../crates/indexer-client" }
untron-v3-bindings = { path = "../../crates/bindings" }
aa = { path = "../../crates/aa" }
tron = { path = "../../crates/tron" }
untron-observability = { path = "../../crates/observability" }
# utoipa v5 is OpenAPI 3.1-only; keep Realtor on OpenAPI 3.0.x so downstream tooling
# (and our merged spec) can stay 3.0.3.
utoipa = "4.2.3"
