[package]
name = "relayer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
alloy = "1.2.1"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
untron-v3-indexer-client = { path = "../../crates/indexer-client" }

[build-dependencies]
tonic-prost-build = "0.14.2"
