[package]
name = "relayer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
bs58 = { version = "0.5.1", features = ["check"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio-util = "0.7.16"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics"] }
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
untron-v3-indexer-client = { path = "../../crates/indexer-client" }
untron-v3-bindings = { path = "../../crates/bindings" }
k256 = "0.13.4"
sha2 = "0.10.9"
sha3 = "0.10.8"

[build-dependencies]
tonic-prost-build = "0.14.2"
