[package]
name = "aa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
hex = "0.4.3"
k256 = "0.13.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["time"] }
tracing = "0.1.44"
