[package]
name = "untron-v3-indexer-client"
version = "0.1.0"
edition = "2024"
publish = false
description = "Typed client for the Untron V3 Indexer (PostgREST) API."

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
futures-core = "0.3.31"
progenitor-client = "0.11.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[build-dependencies]
openapiv3 = "2.0.0"
prettyplease = "0.2.29"
progenitor = "0.11.2"
serde_json = "1.0.143"
syn = "2.0.96"
typify = "0.4.3"
