[package]
name = "untron-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
http = "1.3.1"
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking"] }
tokio = { version = "1.49.0", features = ["rt"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
